--- a/gb/17/11/21/n9875323.md
+++ b/gb/17/11/21/n9875323.md
@@ -1,31 +1,31 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>劫后琴声——中国第一代钢琴家巫漪丽的故事</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2017/11/14f93a1778010c5e_ttl7day3iN_Screen_Shot-600x400.jpg" />
-<h6>巫漪丽演奏的这段钢琴曲《梁祝》的视频最近在社交媒体爆红，一夜之间，这个曾祖母级的钢琴演奏家成了网路红人。然而，有谁知道他们所听到的是劫后幸存的琴声呢？（视频截图）
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2017/11/piano-601386-600x400.jpg" />
+<h6>钢琴资料照。（pixabay）
 </h6>
 <hr>
-<p>【大纪元2017年11月21日讯】一位耄耋之年的羸弱老太太蹒跚走上台，满头银发的她站在舞台上，双脚跟优雅地并拢，非常专业地给观众鞠了躬，便在钢琴前坐定，背略佝偻。观众们等待着。她倒不急，停歇了10秒之后，才把手轻轻放在琴键上，那是干枯的手指。然而她的指尖一落到黑白琴键上，瞬间流淌出的音乐，让整场安静下来。</p>
+	<p>【大纪元2017年11月21日讯】一位耄耋之年的羸弱老太太蹒跚走上台，满头银发的她站在舞台上，双脚跟优雅地并拢，非常专业地给观众鞠了躬，便在钢琴前坐定，背略佝偻。观众们等待着。她倒不急，停歇了10秒之后，才把手轻轻放在琴键上，那是干枯的手指。然而她的指尖一落到黑白琴键上，瞬间流淌出的音乐，让整场安静下来。</p>
 <p>老太太演奏的这段钢琴曲《梁祝》的视频最近在社交媒体爆红，一夜之间，这个曾祖母级的钢琴演奏家成了网路红人。然而，有谁知道他们所听到的是劫后幸存的琴声呢？</p>
-<p>她已经在中国舞台上足足消失了50年，半生默默无闻。然而在上世纪50、60年代，“<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%B7%AB%E6%BC%AA%E4%B8%BD.md#1">巫漪丽</a>”这个名字在中国的音乐界无人不知无人不晓。</p>
-<p>对现在的许多学钢琴的音乐人来说，钢琴带给他们的是可以预测的荣誉和掌声。然而对于中国第一代钢琴家<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%B7%AB%E6%BC%AA%E4%B8%BD.md#1">巫漪丽</a>来说，钢琴带给她一生的是从来意想不到的辉煌和磨难。在共产党统治的阴影下，为了双手能弹钢琴，她把她的双脚，她的家，都付之进去了。她的琴声在半个世纪的喧嚣后听来，掩不住的格外苍凉。</p>
+<p>她已经在中国舞台上足足消失了50年，半生默默无闻。然而在上世纪50、60年代，“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B7%AB%E6%BC%AA%E4%B8%BD.md#1">巫漪丽</a>”这个名字在中国的音乐界无人不知无人不晓。</p>
+<p>对现在的许多学钢琴的音乐人来说，钢琴带给他们的是可以预测的荣誉和掌声。然而对于中国第一代钢琴家<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B7%AB%E6%BC%AA%E4%B8%BD.md#1">巫漪丽</a>来说，钢琴带给她一生的是从来意想不到的辉煌和磨难。在共产党统治的阴影下，为了双手能弹钢琴，她把她的双脚，她的家，都付之进去了。她的琴声在半个世纪的喧嚣后听来，掩不住的格外苍凉。</p>
 <h2>年少成名</h2>
 <p>巫漪丽1930年出生于上海知识分子家庭。她的祖父是兴中会登记在册的会员。外祖父李云书，在江浙一带是赫赫有名的巨商大贾，曾担任上海商务总会会长，在辛亥革命期间曾资助过孙中山先生。巫漪丽的父亲巫振英，早年留学美国，是著名建筑师。母亲李慧英也接受过西式教育。</p>
 <p>巫漪丽自幼习琴，对钢琴和古典音乐有着非常浓厚的兴趣。学琴一年，她便夺得上海儿童音乐比赛钢琴组第一名。8岁的巫漪丽“稀里糊涂”赢得了大奖杯。那个银奖杯很大，她抱不动，舅舅就把她抱在领奖椅子上，一起举起了奖杯。当年的上海《申报》也报导了这件事。</p>
-<p>获奖后，上海一些有名望的钢琴老师主动到她家，希望免费教她。她舅舅把她带到意大利籍著名音乐家<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%A2%85%E7%99%BE%E5%99%A8.md#1">梅百器</a>（Maestro Mario Paci）面前。梅百器是上海交响乐团的前身——上海工部局乐队创办人，他既是著名的指挥家，又是音乐教育家，20世纪初曾在德国获得李斯特钢琴比赛首奖，也是李斯特的再传弟子。</p>
-<p><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%A2%85%E7%99%BE%E5%99%A8.md#1">梅百器</a>在听完巫漪丽弹奏后，当场就答应收下她。他没有儿童学生，不到10岁的巫漪丽是他第一个小弟子。</p>
+<p>获奖后，上海一些有名望的钢琴老师主动到她家，希望免费教她。她舅舅把她带到意大利籍著名音乐家<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%A2%85%E7%99%BE%E5%99%A8.md#1">梅百器</a>（Maestro Mario Paci）面前。梅百器是上海交响乐团的前身——上海工部局乐队创办人，他既是著名的指挥家，又是音乐教育家，20世纪初曾在德国获得李斯特钢琴比赛首奖，也是李斯特的再传弟子。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%A2%85%E7%99%BE%E5%99%A8.md#1">梅百器</a>在听完巫漪丽弹奏后，当场就答应收下她。他没有儿童学生，不到10岁的巫漪丽是他第一个小弟子。</p>
 <p>10年后，巫漪丽在上海兰心大戏院，与上海交响乐团首次合作演奏《贝多芬第一钢琴协奏曲》，全场轰动。巫漪丽一举成名，成为上海滩乐坛上一颗耀眼的新星，“最年轻的女钢琴演奏家”。那一年是1949年，巫漪丽19岁。</p>
 <h2>琴瑟和鸣</h2>
-<p>1954年，她离开上海交响乐团，调往北京中央乐团。一年后担任中央乐团第一任钢琴独奏家。钢琴，不仅给巫漪丽带来了无限荣耀，也让她结识了一生的挚爱、中央乐团第一任小提琴首席<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%9D%A8%E7%A7%89%E8%8D%AA.md#1">杨秉荪</a>。</p>
-<p>小提琴演奏家<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%9D%A8%E7%A7%89%E8%8D%AA.md#1">杨秉荪</a>自幼是个孤儿，比她大一岁，湖北武汉人，极有音乐才华。</p>
+<p>1954年，她离开上海交响乐团，调往北京中央乐团。一年后担任中央乐团第一任钢琴独奏家。钢琴，不仅给巫漪丽带来了无限荣耀，也让她结识了一生的挚爱、中央乐团第一任小提琴首席<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9D%A8%E7%A7%89%E8%8D%AA.md#1">杨秉荪</a>。</p>
+<p>小提琴演奏家<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9D%A8%E7%A7%89%E8%8D%AA.md#1">杨秉荪</a>自幼是个孤儿，比她大一岁，湖北武汉人，极有音乐才华。</p>
 <p>巫漪丽和杨秉荪的婚姻，当时人人称羡。夫妻组合的黄金搭挡，合作相当默契。两人琴瑟相调，鸾凤和鸣，一起合作过多首曲目，他俩同另外三人还合作演奏过舒伯特的A大调钢琴五重奏《鳟鱼》。</p>
 <p>1962年，32岁的巫漪丽获评国家一级钢琴演奏家。在命运的最高音上，她听到欢涌的琴音到了潮尖。然而黑暗刚硬的低音已经敲响，一步步放大，吞噬了这最华美的乐章。1966年，音乐嘎然而止了。</p>
 <h2>共产党的政治迫害</h2>
 <p>在这之前，巫漪丽和杨秉荪每天都是要练琴的，他们从未想到自己当宝贝的西洋乐器会被无产阶级打翻在地，再踏上它们的大脚。然而，红卫兵和造反派已经明令宣布：不准他们再拉琴、弹琴了。</p>
 <p>他们偷偷地练琴，杨秉荪把指法和运弓分开来练习，不让他的琴发出声音。巫漪丽也在无声地练习弹钢琴。琴是无声的，音乐在他们心中。</p>
-<p>当时中央乐团还是<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%A0%B7%E6%9D%BF%E5%9B%A2.md#1">样板团</a>，在文革中，“样板团”可是个响亮的名字，因为它们是文革“旗手”江青亲自抓的典型，是江青进行文艺革命的“试验田”。何蜀在《从一个“样板团”看一段大历史》一文中说，“在各地众多文艺团体都因执行了十七年‘文艺黑线’而遭到批判、清算甚至下放、撤销、解散等打击的时候，只有‘样板团’得天独厚，被列入军队编制，人员都穿上了当时最时髦的军装，吃的是营养得到保证的‘样板伙食’，到各地演出都被当地‘红色政权’待若上宾……”</p>
-<p>身处政治暴风眼的“<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%A0%B7%E6%9D%BF%E5%9B%A2.md#1">样板团</a>”既是对外的橱窗，又是对内的箭靶。虽然是全国唯一的样板乐团，而乐师们的荣与辱、生与死却常常只是一线之差，一夕之间。</p>
+<p>当时中央乐团还是<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%A0%B7%E6%9D%BF%E5%9B%A2.md#1">样板团</a>，在文革中，“样板团”可是个响亮的名字，因为它们是文革“旗手”江青亲自抓的典型，是江青进行文艺革命的“试验田”。何蜀在《从一个“样板团”看一段大历史》一文中说，“在各地众多文艺团体都因执行了十七年‘文艺黑线’而遭到批判、清算甚至下放、撤销、解散等打击的时候，只有‘样板团’得天独厚，被列入军队编制，人员都穿上了当时最时髦的军装，吃的是营养得到保证的‘样板伙食’，到各地演出都被当地‘红色政权’待若上宾……”</p>
+<p>身处政治暴风眼的“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%A0%B7%E6%9D%BF%E5%9B%A2.md#1">样板团</a>”既是对外的橱窗，又是对内的箭靶。虽然是全国唯一的样板乐团，而乐师们的荣与辱、生与死却常常只是一线之差，一夕之间。</p>
 <p>他俩经历了“清理阶级队伍”和清查“五一六”运动，逼近的现实，异常冷酷，令人惊骇。小小一个中央乐团即有四人不堪诬陷迫害和酷刑逼供而自杀：曾任中央文革文艺组成员的陆公达跳楼自杀，原中央乐团党委成员、乐队队长陈子信触电加喝杀虫药自杀，曾任全国文艺界造反组织负责人的巴松管演奏员门春富用书包带上吊自杀，乐团成员、低音大提琴毕业学员依宏明以铁丝上吊自杀。</p>
 <p>杨秉荪没能逃出去。这位曾留学匈牙利的首席小提琴手被打入“反革命小集团”，判刑十年，成为了阶下囚。这回，他被迫和心爱的小提琴，一刀两断。</p>
 <p>监狱可不管他是个首席小提琴手，把他分到干重体力活的施工队。杨秉荪天天用拉小提琴的手搬水泥墩子，浇筑水泥块。因劳累，他患上腰间盘突出，苦不堪言。即便在狱中，杨秉荪还是忍不住在心里想像着琴的样子，偷偷练习。</p>
@@ -54,49 +54,46 @@
 <p>那被强权夺去的琴声，最终会回来，化成不息的声声追问和永不忘记的见证。#</p>
 
 <p>责任编辑：孙芸</p>
-
+	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/8/5/n8172698.md#1">张东园：中共迫害文化精英实录（五）</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/8/1/n8158666.md#1">张东园：中共迫害文化精英实录（四）</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/7/27/n8143459.md#1">张东园：中共迫害文化精英实录（三）</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/7/14/n8099263.md#1">张东园：中共迫害文化精英实录（二）</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/7/10/n8084246.md#1">张东园：中共迫害文化精英实录（一）</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/4/20/n7574947.md#1">大陆社会精英在中共监狱遭受的迫害</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/15/9/1/n4517279.md#1">不畏迫害大陆技术精英墨尔本诉江</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/14/6/26/n4186771.md#1">石铭：从对社会精英的迫害看中共及江泽民犯罪集团的滔天罪恶</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/26/n4186771.md#1">石铭：从对社会精英的迫害看中共及江泽民犯罪集团的滔天罪恶</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/9/1/n4517279.md#1">不畏迫害大陆技术精英墨尔本诉江</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/4/20/n7574947.md#1">大陆社会精英在中共监狱遭受的迫害</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/7/10/n8084246.md#1">张东园：中共迫害文化精英实录（一）</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935263.md#1">澳医学协会西澳主席：学校将关闭</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/25/n10247979.md#1" target="_blank">中共淫乱的前生今世（6）淫乱大看台</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/1/23/n3784118.md#1" target="_blank">他山：中共政法委的罪恶与政法系统人员的赎罪</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/24/n11543039.md#1" target="_blank">颜智华：中国特大饥荒60周年祭（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/9/5/n4520825.md#1" target="_blank">石铭：从爆破专家被酷刑致死看江氏集团的惨无人道</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/11/21/n9875323.htm">劫后琴声——中国第一代钢琴家巫漪丽的故事</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/11/21/n9875323.htm">劫后琴声——中国第一代钢琴家巫漪丽的故事</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/17/11/21/n9875323.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/17/11/21/n9875323.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
